solve a bug on small screen

--- a/css/index.css
+++ b/css/index.css
@@ -15,15 +15,19 @@ a:hover {
 	text-decoration: none;
 }
 
-.container {
-	position: fixed;
-	left: 0px;
-	top:0px;
-	right: 0px;
-	bottom: 0px;
+body {
 	background-image: url(../images/index/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	height: 900px;
+}
+
+.container {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	top: 0px;
 }
 
 .hide-btn {
@@ -103,23 +107,25 @@ a:hover {
 }
 
 .box {
-  display: flex;
-  flex-wrap: wrap;
+	display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.row:nth-child(1){
-  justify-content: space-around;
+.row:nth-child(1) {
+    justify-content: space-around;
 }
 
-.row{
-  flex-basis: 100%;
-  display:flex;
+.row {
+    flex-basis: 100%;
+    display:flex;
+    display: -webkit-flex;
 }
 
-.row:nth-child(2){
-  justify-content: center;
+.row:nth-child(2) {
+    justify-content: center;
 }
 
 .row:nth-child(3){
-  justify-content: space-between;
+    justify-content: space-between;
 }
